fix(router): use `form urlencoded` req body instead of query params in post req for authorization
